# GPT-PDF-API

./: Dockerfile  pyproject.toml
Database/: db.py  setting.py
api/: main.py
