[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Raza-Aslam <143617095+raza-aslam@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.31.0"}
sqlmodel = "^0.0.22"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
reportlab = "^4.2.2"
aiosmtplib = "^3.0.2"
jinja2 = "^3.1.4"
python-multipart = "^0.0.10"
pytesseract = "^0.3.13"
httpx = "^0.27.2"
ngrok = "^1.4.0"
pdf2image = "^1.17.0"
fitz = "^0.0.1.dev2"
pymupdf = "^1.24.11"
psycopg = "^3.2.3"
psycopg-binary = "^3.2.3"
aiofiles = "^24.1.0"
cachetools = "^5.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
